--- a/src/main/resources/templates/commons.html
+++ b/src/main/resources/templates/commons.html
@@ -2,10 +2,12 @@
 	<span th:remove="tag" th:fragment="common-css" xmlns:th="http://www.thymeleaf.org">
 		<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}"/>
 		<link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.css}"/>
+		<link rel="stylesheet" type="text/css" th:href="@{/css/jquery-ui.css}"/>
 		<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 	</span>
 	<span th:remove="tag" th:fragment="common-js" xmlns:th="http://www.thymeleaf.org">
 		<script type="text/javascript" th:src="@{/js/jquery-3.2.1.js}"></script>
 		<script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
+		<script type="text/javascript" th:src="@{/js/jquery-ui.js}"></script>
 	</span>
 </div>
